--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <!-- <meta http-equiv="x-ua-compatible" content="ie=edge" /> -->
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
@@ -29,7 +29,7 @@
 <div class="container my-5">
     <div class="row d-flex justify-content-center text-white">
         <div class="col-lg-12 col-md-8 col-sm-10">
-            <div id="wrapper-bg" class="card shadow-1-secondary shadow-2-strong bg-image" style="background-image: url('img/snow.gif');">
+            <div id="wrapper-bg" class="card shadow-1-secondary shadow-2-strong bg-image" style="background-image: url('img/thunderstorm.gif')">
                 <!-- Current Data -->
                 <div class="card-header text-center border-0 mb-3">
                     <p class="h2 mb-1 " id="wrapper-name"></p>
@@ -128,13 +128,7 @@
 
     <script type="text/javascript" src="js/mdb.min.js"></script>
 
-    <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js">
-
-
-
-</script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"> </script>
     <script src="script.js"></script>
 </body>
 </html>
